src/styles.css
/* ... */
@media only screen and (max-width: 768px) {
    .modal-account-verified-success .modal-dialog {
        max-width: 100%;
        height: 100%;
        margin: 0;
    }
}

.webpush-swal2-popup .webpush-swal2-modal .webpush-swal2-show {
    background: none !important;
}

#ex-doccheck-dialog {
    z-index: 90003 !important;
}

.color-primary {
    color: var(--highlight);
    font-weight: 700;
}

.disabled {
    pointer-events: none;
    text-decoration: none;
    opacity: 0.5;
}

.icon-hover {
    box-sizing: content-box;
    fill: var(--background);
    border: 0;
    border-radius: 4px;
    transition: fill 0.3s ease;
}

.icon-hover:hover path{
    fill: var(--highlight);
}

.custom-spinner {
    position: absolute;
    left: auto;
    right: 16px;
    transform: translateY(-50%);
    width: 18px;
    height: 18px;
    bottom: 0;
    margin: 0;
}

.custom-spinner div {
    width: 16px;
    height: 16px;
    margin: 0;
    border-width: 1.5px;
    top: 0;
}

